k8s/scraper-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraper-app
  labels:
    app: scraper-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scraper-app
  template:
    metadata:
      labels:
        app: scraper-app
    spec:
      containers:
        - name: scraper-app
          image: scraper-app-image:v2.1
          imagePullPolicy: Never
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 500m
              memory: 500Mi
