k8s/server-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-app
  template:
    metadata:
      labels:
        app: server-app
    spec:
      containers:
        - name: server-app
          image: server-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 12121
              protocol: TCP
              name: http
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 500m
              memory: 500Mi
