k8s/timer-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timer-app
  labels:
    app: timer-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timer-app
  template:
    metadata:
      labels:
        app: timer-app
    spec:
      containers:
        - name: timer-app
          image: timer-app-image:v2.1
          imagePullPolicy: Never
          ports:
            - containerPort: 12121
              protocol: TCP
              name: http
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 500m
              memory: 500Mi
