k8s/server-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-app
spec:
  selector:
    app: server-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 12121
