k8s/timer-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timer-app
spec:
  selector:
    app: timer-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 12121
