k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vservice-app
  labels:
    app: vservice-app
spec:
  hosts:
    - "*"
  gateways:
    - ingress-gateway
  http:
    - match:
      - uri:
          prefix: "/time"
      - uri:
          prefix: "/statistics"
      route:
        - destination:
            host: timer-app
            port:
              number: 3000
